--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,5 @@
 @import url(./_partials/variables.css);
 @import url(./_partials/common.css);
 @import url(./_partials/responsive.css);
+
+/* MOBILE FIRST */
