--- a/css/_partials/common.css
+++ b/css/_partials/common.css
@@ -1,7 +1,7 @@
 body{
     height: 100vh;
     display: flex;
-    background-color: red;
+    background: linear-gradient( to top, #DADAD3 80%, #019588 20%);    
 }
 
 .container{
