--- a/css/_partials/common.css
+++ b/css/_partials/common.css
@@ -1,7 +1,7 @@
 body{
     height: 100vh;
     display: flex;
-    background: linear-gradient( to top, #DADAD3 80%, #019588 20%);    
+    background: linear-gradient(#019588 20%, #DADAD3 20%, #DADAD3 80%);    
 }
 
 .container{
@@ -10,21 +10,54 @@ body{
 }
 
 .row{
-    height: 100%;
+    /* height: 100%; */
     background-color: silver;
 }
 
 .col{
-    height: 100%;
+    /* height: 100%; */
     background-color: white;
 }
 
 .top, .foot{
-    height: 10%;
-    background-color: lightgray;
+    background-color: #EAEAEA;
+    display: flex;
+    align-items: center;
+}
+
+.top-img{
+    width: 100px ;
+    height: 100px;
+    padding: 20px;
+}
+
+.top-img img{
+    height: 100%;
+    width: 100%;
+    max-width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.top-nome{
+    width: 80%;
 }
 
 .center {
-    height: 80%;
-    background-color: green;
+    min-height: 80vh;
+    background-image:url(../../img/mine.jpg);
+    overflow: auto;
+}
+
+.foot{
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+}
+
+#msg{
+    padding: 10px;
+    width: 90%;
+    border-radius: 5px;
+    border: none;
 }
