--- a/css/_partials/common.css
+++ b/css/_partials/common.css
@@ -10,13 +10,23 @@ body{
 }
 
 .row{
-    /* height: 100%; */
+    height: 100%;
     background-color: silver;
 }
 
 .col{
-    /* height: 100%; */
+    height: 100%;
     background-color: white;
+}
+
+.col.content{
+    flex-grow: 1;
+
+    overflow: hidden;
+}
+
+.col.tablet-only{
+    display: none;
 }
 
 .top, .foot{
@@ -26,9 +36,9 @@ body{
 }
 
 .top-img{
-    width: 100px ;
-    height: 100px;
-    padding: 20px;
+    width: 50px ;
+    height: 50px;
+    margin: 8px 15px;
 }
 
 .top-img img{
@@ -43,9 +53,13 @@ body{
     width: 80%;
 }
 
+.top-nome span{
+    font-size: larger;
+}
+
 .center {
-    min-height: 80vh;
-    background-image:url(../../img/mine.jpg);
+    height:calc(100% - (66px + 56px));
+    background-image:url(../../img/mine.jpg) ;
     overflow: auto;
 }
 
