--- a/css/_partials/responsive.css
+++ b/css/_partials/responsive.css
@@ -1,9 +1,5 @@
 /* TABLET */
 @media screen and (min-width: 480px) {
-    .tablet-only{
-        display:block
-    }
-
     .row{
         display: flex;
     }
@@ -14,6 +10,9 @@
 
     .col.tablet-only{
         width: 12%;
+        display: block;
+        min-width: 80px;
+        overflow: hidden;
     }
 }
 
@@ -25,10 +24,6 @@
         height: 90%;
         margin: auto;
         max-width: 1200px;
-    }
-
-    .col{
-        width: 70%;
     }
 
     .col.tablet-only{
