--- a/css/_partials/responsive.css
+++ b/css/_partials/responsive.css
@@ -13,6 +13,11 @@
         display: block;
         min-width: 80px;
         overflow: hidden;
+        border-right: 1px solid lightgrey;
+    }
+
+    .tablet-only{
+        display: block;
     }
 }
 
